--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: objective-c
 osx_image: xcode7
-xctool_args: -destination 'platform=iOS Simulator,name=iPad 2'
-xcode_sdk: iphonesimulator
-xcode_project: GovData.xcodeproj
-xcode_scheme: GovData
+script:
+ - xctool -scheme Tests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6' test
