--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: objective-c
 osx_image: xcode7
+before_script:
+ - open -a Simulator
 script:
  - xctool -scheme Tests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6' test
