--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 osx_image: xcode7
 script:
-  - xcrun instruments -s devices
-# - open -a Simulator
-# - xctool -scheme Tests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6' test
+# - xcrun instruments -s devices
+ - instruments -w "iPhone 6s (9.0) ["
+ - xctool -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6s" test
