--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ osx_image: xcode7
 script:
  - xcrun instruments -s devices
 # - instruments -w "iPhone 6 (9.0) ["
- - open -a "Simulator" --args -CurrentDeviceUDID A84965FC-070D-4EAF-83E8-84FFE99F5866
- - sleep 5
- - xctool -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,OS=9.0,name=iPhone 6s" test
+# - open -a "Simulator" --args -CurrentDeviceUDID A84965FC-070D-4EAF-83E8-84FFE99F5866
+# - sleep 5
+ - xctool -project GovData.xcodeproj -scheme Tests -sdk iphonesimulator -destination "OS=9.0,name=iPhone 6s" clean build test
