--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ osx_image: xcode7
 xcode_sdk: iphonesimulator
 xcode_project: GovData.xcodeproj
 xcode_scheme: GovData
-xctool_args: -destination 'OS=9.0,name=iPhone 6s'
+xctool_args: -destination "OS=9.0,name=iPhone 6s"
