Print available devices

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ xcode_sdk: iphonesimulator
 xcode_project: GovData.xcodeproj
 xcode_scheme: GovData
 xctool_args: -destination "OS=9.0,name=iPhone 6s"
+before_script: 
+ - xcrun simctl list devices
