--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ osx_image: xcode7
 xcode_sdk: iphonesimulator
 xcode_project: GovData.xcodeproj
 xcode_scheme: GovData
-xctool_args: -destination "OS=9.0,name=iPhone 6s"
+xctool_args: -destination "OS=9.0,name=iPhone 6s Plus,id=DB7245EA-213E-4F54-8DB8-F449678C90C5"
 before_script: 
  - open -a Simulator
  - xcrun simctl list devices
+ - xctool -v
