Added the project back

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: objective-c
 osx_image: xcode7
 xcode_sdk: iphonesimulator
+xcode_project: GovData.xcodeproj
 xcode_scheme: GovData
 xctool_args: -destination "name=iPhone 6s Plus"
 before_script: 
