--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ before_script:
  - xcrun simctl list devices
  - xctool -version
  - xcodebuild -version -sdk
+ - xcode-select --print-path
 script:
  - xctool -showTasks -destination "name=iPhone 6s Plus" -project GovData.xcodeproj -scheme GovData -sdk iphonesimulator build test
