Removed build settings

--- a/GovData.xcodeproj/xcshareddata/xcschemes/GovData.xcscheme
+++ b/GovData.xcodeproj/xcshareddata/xcschemes/GovData.xcscheme
@@ -9,14 +9,28 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "992A10D61BBED5C9001D80FC"
                BuildableName = "libGovData.a"
                BlueprintName = "GovData"
+               ReferencedContainer = "container:GovData.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "992A10E91BBED9C3001D80FC"
+               BuildableName = "Tests.xctest"
+               BlueprintName = "Tests"
                ReferencedContainer = "container:GovData.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
