Revert "Deleted two unused actions"
This reverts commit 5e42e7ce5e1c00d8fb2f0c7cc79d11df6cf47ce1.

--- a/GovData.xcodeproj/xcshareddata/xcschemes/GovData.xcscheme
+++ b/GovData.xcodeproj/xcshareddata/xcschemes/GovData.xcscheme
@@ -103,4 +103,11 @@
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
+   <AnalyzeAction
+      buildConfiguration = "Debug">
+   </AnalyzeAction>
+   <ArchiveAction
+      buildConfiguration = "Release"
+      revealArchiveInOrganizer = "YES">
+   </ArchiveAction>
 </Scheme>
