--- a/GovData.xcodeproj/xcshareddata/xcschemes/Tests.xcscheme
+++ b/GovData.xcodeproj/xcshareddata/xcschemes/Tests.xcscheme
@@ -80,4 +80,11 @@
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
+   <AnalyzeAction
+      buildConfiguration = "Debug">
+   </AnalyzeAction>
+   <ArchiveAction
+      buildConfiguration = "Release"
+      revealArchiveInOrganizer = "YES">
+   </ArchiveAction>
 </Scheme>
