--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: objective-c
 osx_image: xcode7
+before_install:
+ - gem install cocoapods -v '1.0.1'
 before_script: 
  - open -a Simulator
  - xcrun simctl list devices
