--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 osx_image: xcode7
 before_install:
  - gem install cocoapods -v '1.0.1'
- - pod repo update
+ - travis_wait pod repo update
 before_script: 
  - open -a Simulator
  - xcrun simctl list devices
