--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: objective-c
-osx_image: xcode7
+osx_image: xcode8.2
 before_install:
- - gem install cocoapods -v '1.0.1'
- - travis_wait pod repo update
+ - gem install cocoapods -v '1.2.0.beta.1'
 before_script: 
  - open -a Simulator
  - xcrun simctl list devices
