--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: objective-c
 osx_image: xcode8.2
 before_install:
+ - gpg2 --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
  - rvm get head
  - gem install cocoapods -v '1.2.0.beta.1'
 before_script: 
