xctool is missing support for building from xcode 8 - running only tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
  - xctool -version
  - xcodebuild -version -sdk
 script:
- - xctool -showTasks -destination "name=iPhone 6s Plus" -project GovData.xcodeproj -scheme GovData -sdk iphonesimulator build test
+ - xctool -showTasks -destination "name=iPhone 6s Plus" -project GovData.xcodeproj -scheme GovData -sdk iphonesimulator run-tests
