--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
  - curl -sSL https://rvm.io/mpapis.asc | gpg2 --import -
  - rvm get head
  - gem install cocoapods -v '1.2.0.beta.1'
+ - brew reinstall --HEAD xctool
 before_script: 
  - open -a Simulator
  - xcrun simctl list devices
